--- a/project/src/Ocarat/CoreBundle/Resources/views/Home/detail.html.twig
+++ b/project/src/Ocarat/CoreBundle/Resources/views/Home/detail.html.twig
@@ -20,15 +20,44 @@
                 <thead>
                 <tr>
 
-                    <th data-toggle="tooltip" data-placement="top" title="" style="overflow: hidden; position: relative;" data-original-title="Une campagne est composée d’une source et d’un support d’acquisition.">Campagne </th>
-                    <th data-toggle="tooltip" data-placement="top" title="" style="overflow: hidden; position: relative;" data-original-title="Nombre de commandes « valide ». Les arnaques, annulations et paiements en attentes ne sont pas comptabilisés (voir configuration des statuts).">Nb Commandes</th>
-                    <th data-toggle="tooltip" data-placement="top" title="" style="overflow: hidden; position: relative;" data-original-title="Chiffre d’affaire exprimé hors-taxe. Les frais de port ainsi que les remboursements sont comptabilisés dans ce chiffre.">Chiffre d'affaire</th>
-                    <th data-toggle="tooltip" data-placement="top" title="" style="overflow: hidden; position: relative;" data-original-title="Moyenne des montants de commande">Panier Moyen</th>
-                    <th data-toggle="tooltip" data-placement="top" title="" style="overflow: hidden; position: relative;" data-original-title="Selon facture mensuelle hors-taxe.">Coût</th>
-                    <th data-toggle="tooltip" data-placement="top" title="" style="overflow: hidden; position: relative;" data-original-title="Le coût marketing divisé par le chiffre d’affaire. Plus le % est petit meilleur est le ROI. Au-dessus de 100% ce n’est plus rentable.">% coût / CA</th>
-                    <th data-toggle="tooltip" data-placement="top" title="" style="overflow: hidden; position: relative;" data-original-title="Le % que représente ce levier sur le chiffre d’affaire sélectionné.">% du CA</th>
-                    <th data-toggle="tooltip" data-placement="top" title="" style="overflow: hidden; position: relative;" data-original-title="Cout marketing HT par commande.">CPA</th>
-                    </tr>
+                    <th data-toggle="tooltip" data-placement="top" title=""
+                        style="overflow: hidden; position: relative;"
+                        data-original-title="Une campagne est composée d’une source et d’un support d’acquisition.">
+                        Campagne
+                    </th>
+                    <th data-toggle="tooltip" data-placement="top" title=""
+                        style="overflow: hidden; position: relative;"
+                        data-original-title="Nombre de commandes « valide ». Les arnaques, annulations et paiements en attentes ne sont pas comptabilisés (voir configuration des statuts).">
+                        Nb Commandes
+                    </th>
+                    <th data-toggle="tooltip" data-placement="top" title=""
+                        style="overflow: hidden; position: relative;"
+                        data-original-title="Chiffre d’affaire exprimé hors-taxe. Les frais de port ainsi que les remboursements sont comptabilisés dans ce chiffre.">
+                        Chiffre d'affaire
+                    </th>
+                    <th data-toggle="tooltip" data-placement="top" title=""
+                        style="overflow: hidden; position: relative;"
+                        data-original-title="Moyenne des montants de commande">Panier Moyen
+                    </th>
+                    <th data-toggle="tooltip" data-placement="top" title=""
+                        style="overflow: hidden; position: relative;"
+                        data-original-title="Selon facture mensuelle hors-taxe.">Coût
+                    </th>
+                    <th data-toggle="tooltip" data-placement="top" title=""
+                        style="overflow: hidden; position: relative;"
+                        data-original-title="Le coût marketing divisé par le chiffre d’affaire. Plus le % est petit meilleur est le ROI. Au-dessus de 100% ce n’est plus rentable.">
+                        % coût / CA
+                    </th>
+                    <th data-toggle="tooltip" data-placement="top" title=""
+                        style="overflow: hidden; position: relative;"
+                        data-original-title="Le % que représente ce levier sur le chiffre d’affaire sélectionné.">% du
+                        CA
+                    </th>
+                    <th data-toggle="tooltip" data-placement="top" title=""
+                        style="overflow: hidden; position: relative;"
+                        data-original-title="Cout marketing HT par commande.">CPA
+                    </th>
+                </tr>
                 </thead>
                 <tbody>
                 {% set sumNb = 0 %}
@@ -39,7 +68,9 @@
                         {% set sumNb = sumNb + campaign['nbOrder'] %}
                         {% set sumCa = sumCa + campaign['Ca'] %}
                         {% set sumCost = sumCost + campaign['cost'] %}
-                        <td><a href="{{ path('campaign', {'campaignName': name, 'monthFrom':monthFrom, 'monthTo': monthTo}) }}">{{ name }}</a></td>
+                        <td>
+                            <a href="{{ path('campaign', {'campaignName': name, 'monthFrom':monthFrom, 'monthTo': monthTo}) }}">{{ name }}</a>
+                        </td>
                         <td>{{ campaign['nbOrder'] }}</td>
                         <td>{{ campaign['Ca']|number_format(2, '.', ',') }}</td>
                         <td>
@@ -52,7 +83,7 @@
                         <td>{{ campaign['cost']|number_format(2, '.', ',') }}</td>
                         <td>
                             {% if campaign['Ca'] > 0 %}
-                                 {{ (campaign['cost']*100/campaign['Ca'])|number_format(2, '.', ',') }}
+                                {{ (campaign['cost']*100/campaign['Ca'])|number_format(2, '.', ',') }}
                             {% else %}
                                 {{ campaign['cost']|number_format(2, '.', ',') }}
                             {% endif %}
@@ -68,7 +99,7 @@
 
                     </tr>
 
-               {% endfor %}
+                {% endfor %}
 
                 </tbody>
                 <tfoot>
@@ -110,26 +141,28 @@
 
     <script type="text/javascript">
 
-    $('#chart-tooltip').remove();
-    var x = item.datapoint[0], y = item.datapoint[1];
+        $('#chart-tooltip').remove();
+        var x = item.datapoint[0], y = item.datapoint[1];
 
-    if (item.seriesIndex === 0) {
-        ttlabel = '<strong>' + (y).format(2, ' ') + '</strong> €';
-    } else if (item.seriesIndex === 1) {
-        ttlabel = 'coût :<strong>' + (y).format(2, ' ') + '</strong> €';
-    } else if (item.seriesIndex === 2) {
-        ttlabel = '<strong>' + y + '</strong> ventes';
-    }
+        if (item.seriesIndex === 0) {
+            ttlabel = '<strong>' + (y).format(2, ' ') + '</strong> €';
+        } else if (item.seriesIndex === 1) {
+            ttlabel = 'coût :<strong>' + (y).format(2, ' ') + '</strong> €';
+        } else if (item.seriesIndex === 2) {
+            ttlabel = '<strong>' + y + '</strong> ventes';
+        }
 
-    $('<div id="chart-tooltip" class="chart-tooltip">' + ttlabel + '</div>')
-    .css({top: item.pageY - 45, left: item.pageX + 5}).appendTo("body").show();
-    }
-    }
-    else {
-    $('#chart-tooltip').remove();
-    previousPoint = null;
-    }
-    });
+        $('<div id="chart-tooltip" class="chart-tooltip">' + ttlabel + '</div>')
+                .css({top: item.pageY - 45, left: item.pageX + 5}).appendTo("body").show();
+        }
+        }
+        else
+        {
+            $('#chart-tooltip').remove();
+            previousPoint = null;
+        }
+        })
+        ;
     </script>
 
 {% endblock %}
