--- a/project/src/Ocarat/CoreBundle/Resources/views/Product/index.html.twig
+++ b/project/src/Ocarat/CoreBundle/Resources/views/Product/index.html.twig
@@ -1,77 +1,337 @@
 {% set page ='product' %}
+{% set showMonth = false %}
 {% extends "OcaratCoreBundle::template.html.twig" %}
 
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="/bundles/ocaratcore/js/plugins/chosen/chosen.css">
+    <style>
+        .tooltip-popover-content {
+            white-space:pre-wrap;
+            max-width: 200px;
+        }
+    </style>
 {% endblock %}
 
 {% block content %}
+    {% if orderProducts|length > 0%}
+        <div class="block full">
+            <!-- Get Started Content -->
+            <div id="chart-classic" style="height: 300px;"></div>
+            <!-- END Get Started Content -->
+        </div>
+    {% endif %}
 
     <!-- Get Started Block -->
 
     <div class="block full">
         <div class="block-title">
             <h2>Analyse des revenus par catégories et attributs </h2>
+
+            <div class="pull-right">
+                <button class="btn btn-success" id="add"> Ajouter une recherche</button>
+            </div>
         </div>
-        <form action="" method="post">
+
         <div class="search">
-            <select name="include[]" class="chosen-select" multiple="true" style="width: 100%;" data-placeholder="Catégories et attributs à rechercher" tabindex="-1">
-                <optgroup label="Attributs">
-                    {% for attribut in attributes %}
-                        <option value="attr_{{ attribut['id_feature_value'] }}" {% if ("attr_" ~ attribut['id_feature_value']) in app.request.get('include') %} selected {% endif %}>{{ attribut['name'] }}</option>
-                    {% endfor %}
-                </optgroup>
-                <optgroup label="Catégories">
-                    {% for category in categories %}
-                        <option value="cat_{{ category['id_category'] }}" {% if ("cat_" ~ category['id_category']) in app.request.get('include') %} selected {% endif %}>{{ category['name'] }}</option>
-                    {% endfor %}
-
-                </optgroup>
+            <select name="productSearch" id="search" class="form-control">
+                <option>Sélectionner votre recherche</option>
+                {% for search in productSearches %}
+                    <option value="{{ search.id }}" {% if productSearch is not null %} {% if search.id == productSearch.id %}selected="selected" {% endif %} {% endif %}>{{ search.name }}</option>
+                {% endfor %}
             </select>
-            <br><br>
-            <select name="exclude[]" class="chosen-select" multiple style="width: 100%;" data-placeholder="Catégories et attributs à exclure">
-                <optgroup label="Attributs">
-                    {% for attribut in attributes %}
-                        <option value="attr_{{ attribut['id_feature_value'] }}" {% if ("attr_" ~ attribut['id_feature_value']) in app.request.get('exclude') %} selected {% endif %}>{{ attribut['name'] }}</option>
-                    {% endfor %}
-                </optgroup>
-                <optgroup label="Catégories">
-                    {% for category in categories %}
-                        <option value="cat_{{ category['id_category'] }}" {% if ("cat_" ~ category['id_category']) in app.request.get('exclude') %} selected {% endif %}>{{ category['name'] }}</option>
-                    {% endfor %}
-
-                </optgroup>
-            </select>
-            <br><br>
-            <input class="btn btn-success" type="submit" value="Rechercher">
         </div>
-        </form>
     </div>
 
-    {% if result is defined %}
+    <div id="addSearch" style="display: none;" class="block full">
+        <div class="block-title">
+            <h2>Ajouter une recherche </h2>
+        </div>
+        <form action="{{ path('product_edit') }}" method="post">
+            <input name="searchName" class="form-control" type="text" required="required"
+                   placeholder="Nom de la recherche">
+            <br>
+            <select name="include[]" class="chosen-select" multiple="true" style="width: 100%;"
+                    data-placeholder="Catégories et attributs à rechercher" tabindex="-1">
+                <optgroup label="Attributs">
+                    {% for attribut in attributes %}
+                        <option value="attr_{{ attribut['id_feature_value'] }}">{{ attribut['name'] }}</option>
+                    {% endfor %}
+                </optgroup>
+                <optgroup label="Catégories">
+                    {% for category in categories %}
+                        <option value="cat_{{ category['id_category'] }}">{{ category['name'] }}</option>
+                    {% endfor %}
 
-        <div class="block-full">
+                </optgroup>
+            </select>
+            <br><br>
+            <select name="exclude[]" class="chosen-select" multiple style="width: 100%;"
+                    data-placeholder="Catégories et attributs à exclure">
+                <optgroup label="Attributs">
+                    {% for attribut in attributes %}
+                        <option value="attr_{{ attribut['id_feature_value'] }}">{{ attribut['name'] }}</option>
+                    {% endfor %}
+                </optgroup>
+                <optgroup label="Catégories">
+                    {% for category in categories %}
+                        <option value="cat_{{ category['id_category'] }}">{{ category['name'] }}</option>
+                    {% endfor %}
+                </optgroup>
+            </select>
+            <br><br>
+            <input class="btn btn-success" type="submit" value="Ajouter la recherche">
+        </form>
+    </div>
+    {% if productSearch is not null %}
+        <div id="mySearch" class="block full">
+            <div class="block-title">
+                <h2>{{ productSearch.name }} </h2>
 
+                <div class="pull-right">
+                    <button class="btn btn-info" id="view"> Détail de cette recherche</button>
+                    <button class="btn btn-warning" id="modify"> Modifier cette recherche</button>
+                    <button class="btn btn-danger" id="delete"> Supprimer cette recherche</button>
+                </div>
+            </div>
+            <div id="searchDetail" style="display: none;">
+                <div class="col-lg-3">
+                    <h3>Catégories</h3>
+                    <ul>
+                        {% for category in productSearch.categoriesFront %}
+                            <li>{{ categories[category]["name"] }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                <div class="col-lg-3">
+                    <h3>Catégories Exclues</h3>
+                    <ul>
+                        {% for category in productSearch.excludedCategoriesFront %}
+                            <li>{{ categories[category]["name"] }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                <div class="col-lg-3">
+                    <h3>Attributs</h3>
+                    <ul>
+                        {% for attr in productSearch.attributesFront %}
+                            <li>{{ attributes[attr]["name"] }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                <div class="col-lg-3">
+                    <h3>Attributs Exclus</h3>
+                    <ul>
+                        {% for attr in productSearch.excludedAttributesFront %}
+                            <li>{{ attributes[attr]["name"] }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+
+        </div>
+        <div id="editSearch" style="display: none;" class="block full">
+            <div class="block-title">
+                <h2>Editer une recherche </h2>
+            </div>
+            <form action="{{ path('product_edit') }}" method="post">
+                <input name="searchName" class="form-control" type="text" required="required"
+                       placeholder="Nom de la recherche" value="{{ productSearch.name }}">
+                <br>
+                <select name="include[]" class="chosen-select" multiple="true" style="width: 100%;"
+                        data-placeholder="Catégories et attributs à rechercher" tabindex="-1">
+                    <optgroup label="Attributs">
+                        {% for attribut in attributes %}
+                            <option value="attr_{{ attribut['id_feature_value'] }}" {% if (attribut['id_feature_value']) in productSearch.attributesFront %} selected {% endif %}>{{ attribut['name'] }}</option>
+                        {% endfor %}
+                    </optgroup>
+                    <optgroup label="Catégories">
+                        {% for category in categories %}
+                            <option value="cat_{{ category['id_category'] }}" {% if (category['id_category']) in productSearch.categories %} selected {% endif %}>{{ category['name'] }}</option>
+                        {% endfor %}
+
+                    </optgroup>
+                </select>
+                <br><br>
+                <select name="exclude[]" class="chosen-select" multiple style="width: 100%;"
+                        data-placeholder="Catégories et attributs à exclure">
+                    <optgroup label="Attributs">
+                        {% for attribut in attributes %}
+                            <option value="attr_{{ attribut['id_feature_value'] }}" {% if ( attribut['id_feature_value']) in productSearch.excludedAttributesFront %} selected {% endif %}>{{ attribut['name'] }}</option>
+                        {% endfor %}
+                    </optgroup>
+                    <optgroup label="Catégories">
+                        {% for category in categories %}
+                            <option value="cat_{{ category['id_category'] }}" {% if ( category['id_category']) in productSearch.excludedCategoriesFront %} selected {% endif %}>{{ category['name'] }}</option>
+                        {% endfor %}
+                    </optgroup>
+                </select>
+                <br><br>
+                <input type="hidden" name="id" value="{{ productSearch.id }}">
+                <input class="btn btn-success" type="submit" value="Modifier la recherche">
+            </form>
+        </div>
+    {% endif %}
+    {% if orderProducts|length > 0%}
+
+        <div class="block full">
+            <div class="block-title">
+                <h2>Récapitulatif des ventes</h2>
+            </div>
+            <div class="table-responsive">
+                <table id="example-datatable" class="table table-striped table-bordered table-vcenter">
+                    <thead>
+                    <tr>
+                        <th data-toggle="tooltip" data-placement="top" title="" style="overflow: hidden; position: relative;" data-original-title="Id produit.">Id Produit </th>
+                        <th data-toggle="tooltip" data-placement="top" title="" style="overflow: hidden; position: relative;" data-original-title="Nom du produit.">Produit </th>
+                        <th data-toggle="tooltip" data-placement="top" title="" style="overflow: hidden; position: relative;" data-original-title="Quantité vendue">Quantité</th>
+                        <th data-toggle="tooltip" data-placement="top" title="" style="overflow: hidden; position: relative;" data-original-title="Chiffre d’affaire exprimé hors-taxe.">Chiffre d'affaire</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% set sumNb = 0 %}
+                    {% set sumCa = 0 %}
+                    {% for i,product in orderProducts %}
+                        <tr>
+                            {% set sumNb = sumNb + product['total'] %}
+                            {% set sumCa = sumCa + product['ca'] %}
+                            <td>{{ product['product_id'] }}</td>
+                            <td>{{ product['product_name'] }}</td>
+                            <td><a data-toggle="popover" data-placement="top" style="overflow: hidden; position: relative;" title="Commandes" data-content="{{ product['orders']|replace({',': ", "})}}">{{ product['total'] }}</a></td>
+                            <td>{{ product['ca']|number_format(2, '.', ',') }}</td>
+
+                        </tr>
+
+                    {% endfor %}
+
+                    </tbody>
+                    <tfoot>
+                    <tr>
+
+                        <th colspan="2">Total</th>
+                        <th>{{ sumNb|number_format(2, '.', ',') }}</th>
+                        <th>{{ sumCa|number_format(2, '.', ',') }}</th>
+
+                    </tr>
+                    </tfoot>
+                </table>
+            </div>
         </div>
     {% endif %}
 
 {% endblock %}
 
 {% block javascripts %}
-  {{ parent() }}
+    {{ parent() }}
     <script src="{{ asset('bundles/ocaratcore/js/plugins/chosen/chosen.jquery.js') }}" type="text/javascript"></script>
     <script type="text/javascript">
         var config = {
-            '.chosen-select'           : {},
-            '.chosen-select-deselect'  : {allow_single_deselect:true},
-            '.chosen-select-no-single' : {disable_search_threshold:10},
-            '.chosen-select-no-results': {no_results_text:'Oops, nothing found!'},
-            '.chosen-select-width'     : {width:"95%"}
+            '.chosen-select': {},
+            '.chosen-select-deselect': {allow_single_deselect: true},
+            '.chosen-select-no-single': {disable_search_threshold: 10},
+            '.chosen-select-no-results': {no_results_text: 'Oops, nothing found!'},
+            '.chosen-select-width': {width: "95%"}
         }
-        for (var selector in config) {
-            $(selector).chosen(config[selector]);
-        }
+        $("#add").click(function () {
+            $('#addSearch').toggle();
+            for (var selector in config) {
+                $(selector).chosen(config[selector]);
+            }
+        });
+        $("#modify").click(function () {
+
+            $('#editSearch').toggle();
+            for (var selector in config) {
+                $(selector).chosen(config[selector]);
+            }
+        });
+        $("#view").click(function () {
+            $('#searchDetail').toggle();
+        });
+        {% if productSearch is not null %}
+        $("#delete").click(function () {
+            document.location.href = Routing.generate('product_del', {productSearch: {{ productSearch.id }}});
+        });
+        {% endif %}
+
+        $("#search").change(function () {
+            if ($("#search").val() > 0)
+                document.location.href = Routing.generate('product_search', {productSearch: $("#search").val()});
+        })
+        {% if orderProducts|length > 0%}
+        /*
+         * Flot Charts Jquery plugin is used for charts
+         *
+         * For more examples or getting extra plugins you can check http://www.flotcharts.org/
+         * Plugins included in this template: pie, resize, stack, time
+         */
+
+        // Get the elements where we will attach the charts
+        var chartClassic    = $('#chart-classic');
+
+        // Data for the charts
+        var dataEarnings    = [{% for ca in graphCa %}{% if loop.index > 1 %},{% endif %}[{{ loop.index }}, '{{ ca }}']{% endfor %}];
+        var dataArticles    = [{% for nb in graphArticles %}{% if loop.index > 1 %},{% endif %}[{{ loop.index }}, '{{ nb }}']{% endfor %}];
+        var dataMonths      = [{% for date in graphDate %}{% if loop.index > 1 %},{% endif %}[{{ loop.index }}, '{{ date}}']{% endfor %}];
+
+        // Classic Chart
+        $.plot(chartClassic,
+                [
+                    {
+                        label: 'Chiffre d’affaire (HT)',
+                        data: dataEarnings,
+                        lines: {show: true, fill: true, fillColor: {colors: [{opacity: .6}, {opacity: .6}]}},
+                        points: {show: true, radius: 5},
+                        yaxis: 1
+                    },
+                    {
+                        label: 'Nombre d’articles vendus',
+                        data: dataArticles,
+                        lines: {show: true},
+                        points: {show: true, radius: 5},
+                        yaxis: 2
+                    }
+                ],
+                {
+                    colors: ['#5ccdde', '#454e59', '#ffffff'],
+                    legend: {show: true, position: 'nw', backgroundOpacity: 0},
+                    grid: {borderWidth: 0, hoverable: true, clickable: true},
+                    yaxes: [ { position: 'right', tickColor: '#f5f5f5', ticks: 3 }, { position: 'left', tickColor: '#f5f5f5', ticks: 3 }],
+                    xaxis: {ticks: dataMonths, tickColor: '#f9f9f9'}
+                }
+        );
+
+        // Creating and attaching a tooltip to the classic chart
+        var previousPoint = null, ttlabel = null;
+        chartClassic.bind('plothover', function(event, pos, item) {
+
+            if (item) {
+                if (previousPoint !== item.dataIndex) {
+                    previousPoint = item.dataIndex;
+
+                    $('#chart-tooltip').remove();
+                    var x = item.datapoint[0], y = item.datapoint[1];
+
+                    if (item.seriesIndex === 0) {
+                        ttlabel = '<strong>' + (y).format(2, ' ') + '</strong> €';
+                    }
+                    if (item.seriesIndex === 1) {
+                        ttlabel = '<strong>' + (y).format(2, ' ') + '</strong>';
+                    }
+
+                    $('<div id="chart-tooltip" class="chart-tooltip">' + ttlabel + '</div>')
+                            .css({top: item.pageY - 45, left: item.pageX + 5}).appendTo("body").show();
+                }
+            }
+            else {
+                $('#chart-tooltip').remove();
+                previousPoint = null;
+            }
+        });
+
+        {% endif %}
+
     </script>
 {% endblock %}
 
